# growpanion

./: .eslintrc.json  .gitignore  CLAUDE.md  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
app/: dashboard-content.tsx  globals.css  layout.tsx  page.tsx
components/: ac-infinity-polling-provider.tsx  database-initializer.tsx  device-layer-page.tsx  environment-icon.tsx  error-boundary.tsx  export-import-dialog.tsx  fertilizer-mixes.tsx  genetics-registry-page.tsx  grow-detail-client.tsx  grow-environment-sources.tsx  grow-environment.tsx  grow-info.tsx  grow-overview.tsx  grow-selector.tsx  grow-wizards.tsx  harvest-dialog.tsx  header.tsx  historical-chart.tsx  infotainment-shell.tsx  lab-mode-telemetry.tsx  navigation-progress.tsx  notification-initializer.tsx  phenotype-comparison.tsx  plant-list.tsx  plant-modal.tsx  product-os-dashboard.tsx  routing-wrapper.tsx  sensor-card.tsx  settings.tsx  tools-page.tsx
hooks/: use-toast.ts  useDateUtils.ts  useFertilizerMixes.ts  useFormValidation.ts  useGrows.ts  usePlants.ts  useRouting.ts  useSensorData.ts  useSettings.ts  useTelemetryRefreshToken.ts
lib/: ac-infinity-api.ts  ac-infinity-integration.ts  ac-infinity-poll-runner.ts  ac-infinity-polling.ts  apiClient.ts  background-polling.ts  comparison-utils.ts  crypto-utils.ts  db.ts  deployment.ts  device-layer-helpers.ts  device-layer-utils.ts  diary-utils.ts  dli-utils.ts  environment-utils.ts  (+27 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+116 files in other folders)
